k8s-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  labels:
    app: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          args: ["--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
          ports:
          - containerPort: 3306
            name: mysql-db
          volumeMounts:
          - name: mysql-db-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
      - name: mysql-db-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-db-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  labels:
    app: mysql-db
spec:
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql-db
  selector:
    app: mysql-db
