kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-api
  labels:
    app: quotes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quotes-api
  template:
    metadata:
      labels:
        app: quotes-api
    spec:
      containers:
        - name: quotes-api
          image: localhost:32000/quotes-api:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /api/status/readyz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10            
          livenessProbe:
            httpGet:
              path: /api/status/healthz
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: quotes-api
  labels:
    app: quotes-api
spec:
  ports:
    - port: 80
      name: http
      targetPort: 5000
  selector:
    app: quotes-api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quotes-api
  labels:
    app: quotes-api
spec:
  tls:
    - hosts:
        - q.beanteam.org
      secretName: beanteam-tls
  rules:
    - host: q.beanteam.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: quotes-api
              port:
                number: 80
